<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:gravity="center"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/toolbar_back"
            app:title="@string/image"
            app:titleTextColor="@color/white">


            <FrameLayout
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:foreground="@drawable/btn_foreground_selector">

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_green_shape"
                    android:gravity="center"
                    android:minWidth="50dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </FrameLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#272828" />


    <RelativeLayout
        android:id="@+id/rl_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#373c3d"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bottom_recycleview"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/bottom_recycleview"
            android:background="@color/pressed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/line"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/ic_image_un_select"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/select"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/tv_select"
                android:background="@android:color/black" />

        </RelativeLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
