<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:gravity="center"
            app:navigationIcon="@drawable/toolbar_back"
            app:title="@string/image"
            app:titleTextColor="@color/white">

            <FrameLayout
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:foreground="@drawable/btn_foreground_selector">

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_green_shape"
                    android:gravity="center"
                    android:minWidth="50dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </FrameLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272828"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:overScrollMode="never"
            android:scrollbars="vertical" />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#9e111212"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </FrameLayout>

    <View
        android:id="@+id/masking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c4111212"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_folder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        android:background="@android:color/white"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/blue">

        <FrameLayout
            android:id="@+id/btn_folder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_folder_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_picture"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_folder_name"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/tv_folder_name"
                    android:layout_toRightOf="@+id/tv_folder_name"
                    android:src="@drawable/text_indicator" />

            </RelativeLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tv_preview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minWidth="70dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/preview"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

        </FrameLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/btn_preview"
            android:layout_toStartOf="@+id/btn_preview"
            android:background="@android:color/black" />

    </RelativeLayout>
</LinearLayout>
